# ProgettoEsame

./: .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  Menu.cpp  Menu.h  README.md  Register.cpp  Register.h  functions.cpp  functions.h  main.cpp
Test/: CMakeLists.txt  test.cpp  testActivity.cpp  testRegister.cpp
